--- a/_source/BaseAdminProject/BaseAdminProject.csproj
+++ b/_source/BaseAdminProject/BaseAdminProject.csproj
@@ -1,8 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>aspnet-BaseAdminProject-DB058085-67C1-4F71-A24C-9EF98394E477</UserSecretsId>
+    <AssemblyName>BaseAdminProject</AssemblyName>
+    <RootNamespace>BaseAdminProject</RootNamespace>
+    <Authors>Felipe Pergher</Authors>
+    <Company>Felipe Pergher</Company>
+    <Product>Base Admin System</Product>
     <CodeAnalysisRuleSet>stylecop.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
 
