--- a/_source/BaseAdminProject/package.json
+++ b/_source/BaseAdminProject/package.json
@@ -39,7 +39,9 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.8.7",
+    "@creative-tim-official/argon-dashboard-free": "^1.2.0",
     "@fortawesome/fontawesome-free": "^5.13.0",
+    "argon-dashboard": "^1.2.0",
     "bootstrap": "^4.4.1",
     "bootstrap-datepicker": "^1.9.0",
     "chart.js": "^2.9.3",
@@ -49,8 +51,11 @@
     "dropzone": "^5.7.0",
     "jquery": "3.4.1",
     "jquery-mask-plugin": "^1.14.16",
+    "jquery-scroll-lock": "^3.1.3",
     "jquery-validation": "1.19.1",
     "jquery-validation-unobtrusive": "3.2.11",
+    "jquery.scrollbar": "^0.2.11",
+    "js-cookie": "^2.2.1",
     "moment": "^2.24.0",
     "popper.js": "^1.16.1",
     "select2": "^4.0.13",
