#477 login implementation with role configurations to users

--- a/_source/BaseAdminProject/appsettings.Development.json
+++ b/_source/BaseAdminProject/appsettings.Development.json
@@ -2,6 +2,18 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=.\\;Database=BaseAdminProject;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "EmailSender": {
+    "Host": "",
+    "Port": 0,
+    "EnableSSL": false,
+    "UserName": "",
+    "EmailFrom": "",
+    "Password": ""
+  },
+  "Admin": {
+    "Email": "admin@admin.com",
+    "Password": "Admin123!"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
