--- a/_source/BaseAdminProject/appsettings.json
+++ b/_source/BaseAdminProject/appsettings.json
@@ -2,6 +2,18 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
+  "EmailSender": {
+    "Host": "",
+    "Port": "",
+    "EnableSSL": "",
+    "UserName": "",
+    "EmailFrom": "",
+    "Password": ""
+  },
+  "Admin": {
+    "Email": "",
+    "Password": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,5 +21,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
   "AllowedHosts": "*"
 }
