--- a/_source/BaseAdminProject/appsettings.json
+++ b/_source/BaseAdminProject/appsettings.json
@@ -22,6 +22,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "InstrumentationKey": "784ab22e-1db6-428e-80fc-dcf9d3804f90"
+  }
 }
