Instrumentation key to azure devops variable

--- a/_source/BaseAdminProject/appsettings.json
+++ b/_source/BaseAdminProject/appsettings.json
@@ -24,6 +24,6 @@
   },
   "AllowedHosts": "*",
   "ApplicationInsights": {
-    "InstrumentationKey": "784ab22e-1db6-428e-80fc-dcf9d3804f90"
+    "InstrumentationKey": ""
   }
 }
