#477 fixing things based on sonar cloud

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ _source/BaseAdminProject/wwwroot/dist/
 _design/argon-dashboard-master/
 _source/BaseAdminProject/wwwroot/images/media-cache/
 _source/BaseAdminProject/wwwroot/img/
+_source/.sonarqube/
