--- a/_source/BaseAdminProject/package.json
+++ b/_source/BaseAdminProject/package.json
@@ -17,6 +17,7 @@
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
+    "eslint": "^7.3.1",
     "extract-loader": "^5.0.0",
     "file-loader": "^6.0.0",
     "node-sass": "^4.14.1",
