--- a/_source/BaseAdminProject/package.json
+++ b/_source/BaseAdminProject/package.json
@@ -18,12 +18,16 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.6.0",
     "eslint": "^7.3.1",
+    "eslint-loader": "^4.0.2",
     "extract-loader": "^5.0.0",
     "file-loader": "^6.0.0",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
+    "stylelint": "^13.6.1",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-webpack-plugin": "^2.1.0",
     "ts-loader": "^7.0.0",
     "typescript": "^3.9.5",
     "uglifyjs-webpack-plugin": "^2.2.0",
