--- a/_source/BaseAdminProject/src/package.json
+++ b/_source/BaseAdminProject/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rvcc-admin-system",
+  "name": "base-admin-system",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -26,7 +26,7 @@
     "mini-css-extract-plugin": "1.3.4",
     "node-sass": "5.0.0",
     "optimize-css-assets-webpack-plugin": "5.0.4",
-    "purgecss-webpack-plugin": "^4.0.0",
+    "purgecss-webpack-plugin": "4.0.0",
     "sass-loader": "10.1.1",
     "style-loader": "2.0.0",
     "stylelint": "13.8.0",
@@ -37,7 +37,7 @@
     "typescript": "4.1.3",
     "url-loader": "4.1.1",
     "webpack": "5.15.0",
-    "webpack-bundle-analyzer": "^4.4.0",
+    "webpack-bundle-analyzer": "4.4.0",
     "webpack-cli": "4.3.1",
     "webpack-dev-middleware": "4.1.0",
     "webpack-dev-server": "3.11.2",
@@ -67,7 +67,7 @@
     "moment": "2.26.0",
     "popper.js": "1.16.1",
     "select2": "4.0.13",
-    "select2-theme-bootstrap4": "0.2.0-beta.6",
+    "select2-theme-bootstrap4": "1.0.0",
     "sweetalert2": "9.15.0"
   }
 }
